--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
+    "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "flowbite-react": "^0.10.2",
     "formik": "^2.4.6",
@@ -18,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
