--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "flowbite-react": "^0.10.2",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.3.1",
