--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
+    "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "yup": "^1.6.1"
   },
